# test-technique-suez

./: .gitignore  README.md  pyproject.toml  requirements.txt
classification_garbage/: README.md  answer.ipynb  image-file-names.sh
classification_garbage/labelled_data/inference/: clean.txt  dirty.txt
classification_garbage/labelled_data/test/: clean.txt  dirty.txt
classification_garbage/labelled_data/train/: clean.txt  dirty.txt
classification_garbage/labelled_data/val/: clean.txt  dirty.txt
classification_garbage/test/: clean.txt
feature_computation/: README.md  answers.ipynb
